api call and ngrx implementation

--- a/angular.json
+++ b/angular.json
@@ -71,7 +71,8 @@
               "browserTarget": "BarMenu:build:production"
             },
             "development": {
-              "browserTarget": "BarMenu:build:development"
+              "browserTarget": "BarMenu:build:development",
+              "proxyConfig": "proxy.conf.json"
             }
           },
           "defaultConfiguration": "development"
