--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@angular/animations": "^16.0.0",
     "@angular/cdk": "^16.0.2",
+    "@angular/cdk-experimental": "16.0.2",
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
